@@ -218,12 +218,6 @@ parameter_list|,
 name|byte
 index|[]
 name|value
-parameter_list|,
-name|int
-name|offset
-parameter_list|,
-name|int
-name|length
 parameter_list|)
 throws|throws
 name|IOException
@@ -240,10 +234,6 @@ operator|.
 name|name
 argument_list|,
 name|value
-argument_list|,
-name|offset
-argument_list|,
-name|length
 argument_list|)
 argument_list|)
 expr_stmt|;
