@@ -71,7 +71,7 @@ specifier|protected
 name|StoredFieldVisitor
 parameter_list|()
 block|{   }
-comment|/** Process a binary field. */
+comment|/** Process a binary field.     * @param value newly allocated byte array with the binary contents.     */
 DECL|method|binaryField
 specifier|public
 name|void
@@ -83,12 +83,6 @@ parameter_list|,
 name|byte
 index|[]
 name|value
-parameter_list|,
-name|int
-name|offset
-parameter_list|,
-name|int
-name|length
 parameter_list|)
 throws|throws
 name|IOException
